--- a/style.css
+++ b/style.css
@@ -105,8 +105,8 @@ body {
 div {
     background: black;
     position: absolute;
-    top: calc(50% - 125PX);
-    left: calc(50% - 125px);
+    top: calc(50% - 50px);
+    left: calc(50% - 50px);
     animation-delay: 5s;
     width: 100px;
     height: 100px;
